<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Earthquake</string>
    <string name="action_settings">Settings</string>
    <string name="urlsevendays">http://www.earthquakescanada.nrcan.gc.ca/api/earthquakes/latest/7d.xml</string>
    <string name="urlonemonth">http://www.earthquakescanada.nrcan.gc.ca/api/earthquakes/latest/30d.xml</string>
    <string name="urloneyear">http://www.earthquakescanada.nrcan.gc.ca/api/earthquakes/latest/365d.xml</string>
    <string name="urlbydate">http://www.earthquakescanada.nrcan.gc.ca/api/earthquakes/date/</string>
    <string name="hello_world">Hello world!</string>

    <color name="white">#FFFFFF</color>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="empty_message">No eathquake data found! Data not available or please check input and try again!</string>
    <string name="search_hint">type text</string>
    <string name="menu_search">Search</string>
    <string name="more_overflow">More options</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_refresh">Refresh</string>
    
    <string-array name="provience_items">
    	<item>All Provience</item>
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
        <item>Others</item>
    </string-array>
    
    <string-array name="provience_values">
    	<item>NA</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
        <item>OR</item>
    </string-array>
    
    <string-array name="year_items">
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
    </string-array>
    
    <string-array name="notification_items">
        <item>Off notification</item>
		<item>check every 2 mins</item>
        <item>check every 30 mins</item>
        <item>check every 1 hour</item>
        <item>check every 2 hour</item>
    </string-array>
    
    <string-array name="notification_values">
        <item>NA</item>
		<item>2</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    
    <string-array name="month_items">
        <item>All Months</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    
    <string-array name="sorttype_items">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    
    <string-array name="sorttype_values">
        <item>AESC</item>
        <item>DESC</item>
    </string-array>
    
    <string-array name="magnitude_items">
        <item>1.0+</item>
        <item>2.0+</item>
        <item>3.0+</item>
        <item>4.0+</item>
        <item>4.5+</item>
        <item>5.0+</item>
        <item>5.5+</item>
        <item>6.0+</item>
        <item>6.5+</item>
        <item>7.0+</item>
    </string-array>
    
    <string-array name="magnitude_values">
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
        <item>5.5</item>
        <item>6.0</item>
        <item>6.5</item>
        <item>7.0</item>
    </string-array>
    
    <string-array name="month_values">
		<item>NA</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    
    <string-array name="distance_items">
        <item>Near me</item>
        <item>1000 miles away</item>
        <item>2000 miles away</item>
        <item>3000 miles away</item>
        <item>5000 miles away</item>
        <item>Canada area</item>
    </string-array>
    
    <string-array name="distance_values">
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>5000</item>
        <item>NA</item>
    </string-array>
    
    <string-array name="listLatestPrefItems">
        <item>Last 7 days</item>
        <item>Last 30 days</item>
        <item>Last 365 days</item>
    </string-array>
    
    <string-array name="listLatestPrefValues">
        <item>7</item>
        <item>30</item>
        <item>365</item>
    </string-array>
    
        <string name="provience">Provience: </string>
        <string name="year">"Year: "</string>
        <string name="month">"Month: "</string>
        <string name="magnitude">"Magnitude: "</string>
        <string name="datetime">"Local date and time: "</string>
        <string name="blank"></string>
        <string name="point">"Point: "</string>
        <string name="depth">"Depth: "</string>
        <string name="viewmap">View Map</string>
</resources>
