<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_search" android:actionLayout="@layout/search_layout" android:showAsAction="always|collapseActionView" android:title="@string/menu_search" android:icon="@drawable/ic_action_find" />
    <item android:icon="@drawable/ic_action_sort" android:id="@+id/menu_sort" android:title="@string/menu_sort_by" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_action_refresh" android:id="@+id/menu_refresh" android:title="@string/menu_refresh" android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_moreoverflow" android:title="@string/more_overflow" android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark" android:showAsAction="always">
		<item android:id="@+id/menu_settings" android:title="@string/menu_settings" android:showAsAction="never" />
	</item>
</menu>
