<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:shrinkColumns="2"
    android:stretchColumns="2" >

 
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1.0"
            android:textSize="18dp"
            android:text="title" android:paddingBottom="10dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="7dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime" android:textSize="14dp" />

        <TextView
            android:id="@+id/tvLocalDatetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3" android:textSize="14dp"
            android:text="@string/blank" android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="7dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="14dp"
            android:text="@string/point" android:gravity="right" android:layout_gravity="right" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:textSize="14dp"
            android:text="@string/blank" android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="7dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="14dp"
            android:text="@string/depth" android:gravity="right" android:layout_gravity="right" />

        <TextView
            android:id="@+id/tvDepth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:textSize="14dp"
            android:text="@string/blank"  android:textStyle="bold"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="7dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="14dp"
            android:text="@string/magnitude" android:gravity="right" android:layout_gravity="right" />

        <TextView
            android:id="@+id/tvMagnitudeAndType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:textSize="14dp"
            android:text="@string/blank" android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="7dp">

        <Button
            android:id="@+id/btnViewMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/viewmap" android:textStyle="bold" android:textSize="14dp" />

    </TableRow>

    

    </TableLayout>
